--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title></title>
   </head>
   <body>
-    <a href="ppt2 4.html">1<a>
-      <a href="ppt2 9.html">2<a>
-        <a href="ppt2 13.html">3<a>
-
+    <a href="ppt2 4.html">1</a>
+      <a href="ppt2 9.html">2</a>
+        <a href="ppt2 13.html">3</a>
+    <a href="ppt2 15.html">4</a>
+    <a href="ppt2 18.html">5</a>
+    <a href="ppt2 21.html">6</a>
+    
   </body>
 </html>
