--- a/index.html
+++ b/index.html
@@ -2,15 +2,48 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="mystyle.css" rel="stylesheet">
     <title></title>
+
   </head>
   <body>
-    <a href="ppt2 4.html">1</a>
-      <a href="ppt2 9.html">2</a>
-        <a href="ppt2 13.html">3</a>
-    <a href="ppt2 15.html">4</a>
-    <a href="ppt2 18.html">5</a>
-    <a href="ppt2 21.html">6</a>
-    
+    <header>
+      <h1><img src="home.svg"></h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href ="#">home</a></li>
+        <li><a href ="#">home</a></li>
+        <li><a href ="#">home</a></li>
+        <li><a href ="#">home</a></li>
+        <li><a href ="#">home</a></li>
+      </ul>
+
+    </nav>
+    <aside id="left">
+      <h4>카테고리</h4>
+      <ul>
+        <li><a href = "#" target="if1">a</a></li>
+        <li><a href = "#" target="if1">b</a></li>
+        <li><a href = "#" target="if1">c</a></li>
+        <li><a href = "#" target="if1">d</a></li>
+        <li><a href = "#" target="if1">e</a></li>
+      </ul>
+
+    </aside>
+    <aside id="right">
+    </aside>
+    <section id="main">
+        <article id="article1">
+          <iframe name="if1" src ="indexheader.html"
+          width="450" height="300"seamless>
+          </iframe>
+        </article>
+    </section>
+    <footer>
+      Copyright (c) 2019 dongyangUniversity <br>
+      서울시 구로동 111-11번지 동양미래대학교 214호 tel: 222-2220<br>
+      관리자 : admin@ddd.ac.kr
+    </footer>
   </body>
 </html>
