--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <aside id="left" width=220>
       <h3>jquery list</h3>
       <ul>
-        <li><a href="ppt2 4.html">1</a></li>
-          <li><a href="ppt2 9.html">1</a></li>
-            <li><a href="ppt2 13.html">1</a></li>
-              <li><a href="ppt2 15.html">1</a></li>
-                <li><a href="ppt2 18.html">1</a></li>
-                  <li><a href="ppt2 21.html">1</a></li>
+        <li><a href="ppt2 4.html"></a></li>
+          <li><a href="ppt2 9.html"></a></li>
+            <li><a href="ppt2 13.html"></a></li>
+              <li><a href="ppt2 15.html"></a></li>
+                <li><a href="ppt2 18.html"></a></li>
+                  <li><a href="ppt2 21.html"></a></li>
 
       </ul>
 
