--- a/slotMachine.html
+++ b/slotMachine.html
@@ -4,6 +4,30 @@
     <meta charset="utf-8">
     <title></title>
     <style>
+      #a {
+
+      display:inline-block;
+      border-style:solid;
+      position:absolute;
+      left:1%;
+      width:104px;
+
+    }
+    #b {
+      display:inline-block;
+      border-style:solid;
+      position:absolute;
+      left:12%;
+        width:104px;
+    }
+    #c {
+      display:inline-block;
+      border-style:solid;
+      position:absolute;
+      left:23%;
+        width:104px;
+    }
+      
       body {
         background-color:black;
         color:white;
@@ -16,8 +40,8 @@
       #game {
         background-color:gold;
         color:silver;
-        width:420px;
-        height:170px;
+        width:325px;
+        height:179px;
         font-size:130px;
       }
     </style>
